helm/aws-load-balancer-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - host: devops.rnd.triton.security
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: triton-devops-kong-proxy
                port:
                  number: 443
