helm/aws-load-balancer-controller/nokong.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  labels:
    name: alb-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance

spec:
   rules:
     - host: devops.rnd.triton.security
       http:
         paths:
           - pathType: Prefix
             path: "/"
             backend:
               service:
                 name: portal
                 port:
                   number: 80
           - pathType: Prefix
             path: "/auth"
             backend:
               service:
                 name: keycloak
                 port:
                   number: 8080
           - pathType: Prefix
             path: "/api/users"
             backend:
               service:
                 name: user-service
                 port:
                   number: 8080
           - pathType: Prefix
             path: "/api/dashboard"
             backend:
               service:
                 name: dashboard-service
                 port:
                   number: 8080
           - pathType: Prefix
             path: "/api/cloudscanner"
             backend:
               service:
                 name: cloudscanner-service
                 port:
                   number: 8080
           - pathType: Prefix
             path: "/api/policies"
             backend:
               service:
                 name: policy-service
                 port:
                   number: 8080
           - pathType: Prefix
             path: "/api/notifications"
             backend:
               service:
                 name: notification-service
                 port:
                   number: 8080
           - pathType: Prefix
             path: "/api/cloud-connect"
             backend:
               service:
                 name: cloudconnect-service
                 port:
                   number: 8080
           - pathType: Prefix
             path: "/api/scheduler"
             backend:
               service:
                 name: scan-scheduler-service
                 port:
                   number: 8080
           - pathType: Prefix
             path: "/api/logs"
             backend:
               service:
                 name: log-service
                 port:
                   number: 8080
